--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "bootstrap": "^4.6.0",
     "file-saver": "^2.0.5",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
