--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zubair",
+  "name": "sellr",
   "homepage": "",
   "version": "0.1.0",
   "private": true,
@@ -10,12 +10,12 @@
     "bootstrap": "^4.6.0",
     "file-saver": "^2.0.5",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "reactstrap": "^8.9.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
